RESOLVED FIXED313463
[Site Isolation] http/wpt/service-workers/third-party-registration.html fails
https://bugs.webkit.org/show_bug.cgi?id=313463
Summary [Site Isolation] http/wpt/service-workers/third-party-registration.html fails
Ryosuke Niwa
Reported 2026-04-27 11:53:05 PDT
http/wpt/service-workers/third-party-registration.html fails with --site-isolation.
Attachments
Ryosuke Niwa
Comment 1 2026-04-27 11:57:32 PDT
Ryosuke Niwa
Comment 2 2026-04-27 12:05:50 PDT
EWS
Comment 3 2026-04-27 21:26:00 PDT
Committed 312170@main (3d8f24ebaa46): <https://commits.webkit.org/312170@main> Reviewed commits have been landed. Closing PR #63726 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2026-04-27 21:26:12 PDT
Note You need to log in before you can comment on or make changes to this bug.