[Site Isolation] http/wpt/service-workers/third-party-registration.html fails https://bugs.webkit.org/show_bug.cgi?id=313463

Reviewed by NOBODY (OOPS!).

In DocumentLoader::commitData(), setServiceWorkerConnection() (line 1356) triggers
ServiceWorkerClientData::from(), which collects ancestorOrigins by traversing
frame->tree().parent(). Under site isolation, the iframe is a provisional frame
created with AddToFrameTree::No, so tree().parent() returns null. The frame only
gets its correct parent later when receivedFirstData() (line 1368) triggers
commitProvisionalFrame() -> parent->tree().replaceChild().

The fix: After receivedFirstData() commits the provisional frame into the tree,
call updateServiceWorkerClientData() to re-register the service worker client with
correct ancestor origins. SWServer::registerServiceWorkerClient already handles
re-registration by updating the stored data via m_clientsById.set().

Also improve the logging in the test for easier debugging.

Co-authored with Claude.

Test: LayoutTests/http/wpt/service-workers/third-party-registration.html

* LayoutTests/http/wpt/service-workers/third-party-registration.html:
* LayoutTests/platform/ios-site-isolation/TestExpectations:
* LayoutTests/platform/mac-site-isolation/TestExpectations:
* Source/WebCore/loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::commitData):